--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "mocha": "^3.4.2"
+  },
+  "dependencies": {
+    "knex": "^0.13.0",
+    "pg": "^6.2.3"
   }
 }
